--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
