--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.15",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
