--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.16.0",
     "@reduxjs/toolkit": "^2.2.4",
+    "@toolpad/core": "^0.5.2",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
