--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.16.0",
+    "@mui/x-data-grid-generator": "^7.17.0",
     "@reduxjs/toolkit": "^2.2.4",
     "@toolpad/core": "^0.5.2",
     "axios": "^1.7.2",
