--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid-generator": "^7.17.0",
     "@reduxjs/toolkit": "^2.2.4",
     "@toolpad/core": "^0.5.2",
+    "ag-grid-react": "^32.2.0",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
     "localforage": "^1.10.0",
